# NeoWorld

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: msvc-build.yml  ubuntu-build.yml
doc/: readme (english).txt  readme.txt  tOXg.txt  J­Â«.txt
src/: audio_io.cpp  audio_io.h  cheaptrick.cpp  config.h  config.h.in  dio.cpp  fft.cpp  getWorldValues77.cpp  getWorldValues77.h  main.cpp  matlabfunctions.cpp  matlabmyfunctions.cpp  matlabmyfunctions.h  platinum.cpp  star.cpp  synthesis.cpp  wavread.cpp  wavread.h  windows.h  world.h
src/world/: dio.h  synthesis.h
